--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat en tiempo real</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <!-- Metadatos robots -->
+     <meta name="description" content="Chat en tiempo real con login por medio de google">
+     <meta name="keywords" content="chat, websocket, chat en tiempo real, chat con firebase">
+     <meta name="author" content="Alexander Gallego Vasquez">
+     <meta name="language" content="es">
+     <meta name="robots" content="index, follow">
+     <link rel="sitemap" type="application/xml" title="Sitemap" href="./sitemap.xml">
+
   </head>
   <body>
     <div id="root"></div>
